--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            overflow-x: hidden; /* Prevent horizontal scrolling */
-            background-image: url('img/splash.jpg'); /* Add the background image URL */
-            background-size: cover;
-            background-repeat: no-repeat;
+            overflow: hidden; /* Prevent scrolling */
         }
 
         header {
@@ -37,14 +34,14 @@
             margin-top: 10px;
         }
 
-        .center-logo {
-            text-align: center;
-            margin-top: 500px; /* Adjust this margin based on your header height */
-        }
-
-        .center-logo img {
-            max-width: 100%;
-            max-height: 100%;
+        #video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1; /* Place the video behind other elements */
         }
     </style>
 </head>
@@ -57,11 +54,11 @@
         </div>
     </header>
 
-    <div class="center-logo">
-        <img src="img/logo.png" alt="Company Logo">
-        <!-- Use "img/logo.png" for the logo -->
-    </div>
+    <video id="video-background" autoplay muted loop>
+        <source src="img/video.mp4" type="video/mp4">
+        <!-- Replace "your-video.mp4" with the actual path or URL of your video -->
+        Your browser does not support the video tag.
+    </video>
 
 </body>
-
 </html>
