--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <video id="video-background" autoplay muted loop>
-        <source src="img/video.mp4" type="video/mp4">
+        <source src="img/video-s.mp4" type="video/mp4">
         <!-- Replace "your-video.mp4" with the actual path or URL of your video -->
         Your browser does not support the video tag.
     </video>
