--- a/index.html
+++ b/index.html
@@ -43,22 +43,6 @@
             object-fit: cover;
             z-index: -1; /* Place the video behind other elements */
         }
-    </style>
-</head>
-<body>
 
-    <header>
-        <div>
-            <img src="img/menu.png" alt="Menu Icon">
-            <!-- Use "img/menu.png" for the small icon image -->
-        </div>
-    </header>
-
-    <video id="video-background" autoplay muted loop>
-        <source src="img/video-s.mp4" type="video/mp4">
-        <!-- Replace "your-video.mp4" with the actual path or URL of your video -->
-        Your browser does not support the video tag.
-    </video>
-
-</body>
-</html>
+        /* Responsive styles for mobile */
+        @
