--- a/index.html
+++ b/index.html
@@ -45,4 +45,33 @@
         }
 
         /* Responsive styles for mobile */
-        @
+        @media (max-width: 767px) {
+            header {
+                height: 40px; /* Adjust the height for mobile */
+            }
+
+            header img {
+                width: 25px; /* Adjust the size for mobile */
+                margin-left: 10px;
+                margin-top: 5px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div>
+            <img src="img/menu.png" alt="Menu Icon">
+            <!-- Use "img/menu.png" for the small icon image -->
+        </div>
+    </header>
+
+    <video id="video-background" autoplay muted loop>
+        <source src="img/video-s.mp4" type="video/mp4">
+        <!-- Replace "img/video-s.mp4" with the actual path or URL of your video -->
+        Your browser does not support the video tag.
+    </video>
+
+</body>
+</html>
