--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             }
 
             header img {
-                width: 25px; /* Adjust the size for mobile */
+                width: 20px; /* Adjust the size for mobile */
                 margin-left: 10px;
                 margin-top: 5px;
             }
@@ -67,7 +67,7 @@
         </div>
     </header>
 
-    <video id="video-background" autoplay muted loop>
+    <video id="video-background" autoplay muted loop playsinline>
         <source src="img/video-s.mp4" type="video/mp4">
         <!-- Replace "img/video-s.mp4" with the actual path or URL of your video -->
         Your browser does not support the video tag.
