--- a/index.html
+++ b/index.html
@@ -68,10 +68,22 @@
     </header>
 
     <video id="video-background" autoplay muted loop playsinline>
-        <source src="img/video-s.mp4" type="video/mp4">
-        <!-- Replace "img/video-s.mp4" with the actual path or URL of your video -->
+        <source src="img/video.mp4" type="video/mp4">
+        <!-- Replace "img/video-desktop.mp4" with the video for desktop -->
         Your browser does not support the video tag.
     </video>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var video = document.getElementById('video-background');
+
+            // Check if the device is a mobile
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+                video.src ="img/video-s.mp4";
+                // Replace "img/video-mobile.mp4" with the video for mobile
+            }
+        });
+    </script>
 
 </body>
 </html>
