--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
 
         button {
             padding: 12px 20px;
+            border-radius: 10px;
             font-size: 16px;
-            background-color: #FFA500; /* Vivid orange */
-            color: #fff;
+            background-color: #fffc00; /* Vivid yellow */
+            color: #201829;
             border: none;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al texto */
         }
 
         button:hover {
