--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- Formulario de registro -->
     <form id="registrationForm">
-        <h2>Registra tu email</h2>
+        <h2>Stay tuned with the latest news\n & updates:</h2>
         <input type="email" id="emailInput" placeholder="Ingrese su email" required>
         <button type="button" onclick="registerEmail()">Enviar</button>
         <p id="thankYouMessage">Muchas gracias por registrarte</p>
