--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         }
         
           /* Estilos para el texto "Registra tu email" */
-    .registration-text {
+    .registrationForm {
       font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al texto */
       font-size: 32pt; /* Tamaño de fuente 32 puntos */
     }
