--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Company</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap">
     <style>
         body {
             margin: 0;
@@ -66,6 +67,8 @@
             text-align: center;
             color: #fff;
             z-index: 999;
+            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al formulario */
+            font-size: 32px; /* Tamaño de fuente 32 puntos */
         }
 
         input[type="email"] {
@@ -88,18 +91,12 @@
             border: none;
             cursor: pointer;
             transition: background-color 0.3s;
-            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al texto */
+            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al botón */
         }
 
         button:hover {
             background-color: #FF8C00; /* Darker shade on hover */
         }
-        
-          /* Estilos para el texto "Registra tu email" */
-    .registrationForm {
-      font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al texto */
-      font-size: 32pt; /* Tamaño de fuente 32 puntos */
-    }
 
         #thankYouMessage {
             display: none;
@@ -121,7 +118,7 @@
 
     <!-- Formulario de registro -->
     <form id="registrationForm">
-        <h2>Stay tuned with the latest news & updates:</h2>
+        <h2>Registra tu email</h2>
         <input type="email" id="emailInput" placeholder="Ingrese su email" required>
         <button type="button" onclick="registerEmail()">Enviar</button>
         <p id="thankYouMessage">Muchas gracias por registrarte</p>
