--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             margin-right: 10px;
             margin-bottom: 10px;
             box-sizing: border-box;
+            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al campo de email */
         }
 
         button {
