--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         }
 
         input[type="email"] {
-            padding: 10px;
-            width: 250px;
-            font-size: 16px;
+            padding: 18px;
+            width: 300px;
+            font-size: 28px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-right: 10px;
@@ -84,9 +84,9 @@
         }
 
         button {
-            padding: 30px 70px;
+            padding: 18px 30px;
             border-radius: 10px;
-            font-size: 16px;
+            font-size: 28px;
             background-color: #fffc00; /* Vivid yellow */
             color: #201829;
             border: none;
@@ -121,7 +121,7 @@
     <form id="registrationForm">
         <h2>Registra tu email</h2>
         <input type="email" id="emailInput" placeholder="Ingrese su email" required>
-        <button type="button" onclick="registerEmail()">Enviar</button>
+        <button type="button" onclick="registerEmail()">ENVIAR</button>
         <p id="thankYouMessage">Muchas gracias por registrarte</p>
     </form>
 
