button size, replacing text title and size

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             color: #fff;
             z-index: 999;
             font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al formulario */
-            font-size: 32px; /* Tamaño de fuente 32 puntos */
+            font-size: 24px; /* Tamaño de fuente 32 puntos */
         }
 
         input[type="email"] {
@@ -84,7 +84,7 @@
         }
 
         button {
-            padding: 15px 30px;
+            padding: 15px 40px;
             border-radius: 10px;
             font-size: 24px;
             background-color: #fffc00; /* Vivid yellow */
@@ -119,8 +119,8 @@
 
     <!-- Formulario de registro -->
     <form id="registrationForm">
-        <h2>Registra tu email</h2>
-        <input type="email" id="emailInput" placeholder="Ingrese su email" required>
+        <h2>Stay tuned with the latest news & updates</h2>
+        <input type="email" id="emailInput" placeholder="Email Address" required>
         <button type="button" onclick="registerEmail()">ENVIAR</button>
         <p id="thankYouMessage">Muchas gracias por registrarte</p>
     </form>
