--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <form id="registrationForm">
         <h2>Stay tuned with the latest news & updates</h2>
         <input type="email" id="emailInput" placeholder="Email Address" required>
-        <button type="button" onclick="registerEmail()">ENVIAR</button>
+        <button type="button" onclick="registerEmail()">SEND</button>
         <p id="thankYouMessage">Muchas gracias por registrarte</p>
     </form>
 
