--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             text-align: center;
             color: #fff;
             z-index: 999;
-            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al formulario */
+            font-family: 'Barlow', sans-serif; /* Aplicar la fuente Teko al formulario */
             font-size: 20px; /* Tamaño de fuente 32 puntos */
         }
 
