iteration logo and image

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         }
 
         header #logo {
-            width: 50px; /* Adjust the width as needed */
+            width: 400px; /* Adjust the width as needed */
             height: auto;
             margin-right: 20px;
+            margin-top: 200px;
         }
 
         #image-background {
