font weight Barlow

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             z-index: 999;
             font-family: 'Barlow', sans-serif; /* Aplicar la fuente Teko al formulario */
             font-size: 20px; /* Tamaño de fuente 32 puntos */
+            font-weight: 500;
         }
 
         input[type="email"] {
