--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             text-align: center;
             color: #fff;
             z-index: 999;
-            font-family: 'Barlow', sans-serif; /* Aplicar la fuente Teko al formulario */
+            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al formulario */
             font-size: 20px; /* Tamaño de fuente 32 puntos */
-            font-weight: 500;
+            font-weight: 300;
         }
 
         input[type="email"] {
