--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al formulario */
             font-size: 20px; /* Tamaño de fuente 32 puntos */
             font-weight: 100;
+            letter-spacing: 2px;
         }
 
         input[type="email"] {
