--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 margin-top: 5px;
             }
 
-            header #logo {
+            <!---header #logo {
                 width: 30px; /* Adjust the width for mobile */
                 margin-right: 10px;
             }
