--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             margin-top: 270px;
         }
 
+        header #over-image {
+            width: auto; /* Adjust the width as needed */
+            height: auto;
+            margin-right: 80px;
+            margin-bottom: 1px;
+        }
+
         #image-background {
             position: fixed;
             top: 0;
@@ -65,6 +72,11 @@
             }
 
             <!---header #logo {
+                width: 30px; /* Adjust the width for mobile */
+                margin-right: 10px; -->
+            }
+
+            header #over-image {
                 width: 30px; /* Adjust the width for mobile */
                 margin-right: 10px;
             }
@@ -132,8 +144,12 @@
             <img src="img/menu.png" alt="Menu Icon">
             <!-- Use "img/menu.png" for the small icon image -->
         </div>
-        <div id="logo-container">
-            <img id="logo" src="img/Logo.png" alt="Company Logo">
+         <!---<div id="logo-container">
+            <img id="logo" src="img/Logo.png" alt="Company Logo">-->
+        </div>
+
+        <div id="over-image">
+            <img id="logo" src="img/over-image.png" alt="over image">
         </div>
     </header>
 
