--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-top: 270px;
         }
 
-        header #over-image {
+       body #over-image {
             width: auto; /* Adjust the width as needed */
             height: auto;
             margin-right: 80px;
