adjusting auto bg image

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 
         #over-image {
             position: fixed;
+            width: 30%; /* Ajusta el porcentaje según tus necesidades */
+            height: auto;
             bottom: 0;
             right: 0;
-            margin: 20px; /* Ajusta el margen según tus necesidades */
+            margin: 2%; /* Ajusta el margen según tus necesidades */
             z-index: 100; /* Place the image above other elements */
         }
 
