--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <img src="img/menu.png" alt="Menu Icon">
             <!-- Use "img/menu.png" for the small icon image -->
         </div>
-        <div id="logo-container">
-            <img id="logo" src="img/Logo.png" alt="Company Logo">
+        <!---div id="logo-container">
+            <img id="logo" src="img/Logo.png" alt="Company Logo"-->
         </div>
     </header>
 
