--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             position: fixed;
             top: 0;
             left: 0;
+            bottom: auto;
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -80,6 +81,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 999;
+            margin-bottom: 100px;
         }
 
         /* Additional styles for the form */
