--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: top; /* Mantiene la parte superior de la imagen visible */
             z-index: -1; /* Place the image behind other elements */
         }
 
