--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             padding: 20px; /* Add padding to the container */
             border-radius: 10px; /* Add rounded corners */
             position: absolute;
-            top: calc(50% + 300px); /* Adjusted to move down by 250 pixels */
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 999;
             margin-bottom: 100px;
+            object-position: bottom;
         }
 
         /* Additional styles for the form */
