--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     padding: 20px; /* Add padding to the container */
     border-radius: 10px; /* Add rounded corners */
     position: fixed; /* Cambiado de absolute a fixed */
-    bottom: 0; /* Ajusta la distancia desde la parte inferior según sea necesario */
+    bottom: 30%; /* Ajusta la distancia desde la parte inferior según sea necesario */
     left: 50%;
     transform: translateX(-50%); /* Solo en el eje X para centrar horizontalmente */
     z-index: 999;
