thank you message

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <h2>Stay tuned with the latest news & updates</h2>
             <input type="email" id="emailInput" placeholder="Email Address" required>
             <button type="button" onclick="registerEmail()">SEND</button>
-            <p id="thankYouMessage">Muchas gracias por registrarte</p>
+            <p id="thankYouMessage">Thank you!</p>
         </form>
     </div>
 
