--- a/index.html
+++ b/index.html
@@ -70,27 +70,43 @@
                 width: 30px; /* Adjust the width for mobile */
                 margin-right: 10px;
             }
+
+            #form-container {
+                bottom: 5%; /* Adjust the distance from the bottom for mobile */
+            }
+
+            input[type="email"] {
+                width: 100%; /* Adjust the width to 100% for mobile */
+                font-size: 18px; /* Adjust font size for mobile */
+                margin-right: 0; /* Remove right margin for mobile */
+                margin-bottom: 10px; /* Add bottom margin for mobile */
+            }
+
+            button {
+                padding: 10px 30px; /* Adjust padding for mobile */
+                font-size: 18px; /* Adjust font size for mobile */
+            }
         }
 
         /* Additional styles for the form container */
         #form-container {
-    background-color: #000; /* Black background color */
-    padding: 20px; /* Add padding to the container */
-    border-radius: 10px; /* Add rounded corners */
-    position: fixed; /* Cambiado de absolute a fixed */
-    bottom: 10%; /* Ajusta la distancia desde la parte inferior según sea necesario */
-    left: 50%;
-    transform: translateX(-50%); /* Solo en el eje X para centrar horizontalmente */
-    z-index: 999;
-    margin-bottom: 10px;
-}
+            background-color: #000; /* Black background color */
+            padding: 20px; /* Add padding to the container */
+            border-radius: 10px; /* Add rounded corners */
+            position: fixed; /* Change from absolute to fixed */
+            bottom: 10%; /* Adjust distance from bottom as needed */
+            left: 50%;
+            transform: translateX(-50%); /* Horizontal centering */
+            z-index: 999;
+            margin-bottom: 10px;
+        }
 
         /* Additional styles for the form */
         form {
             text-align: center;
             color: #fff;
-            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al formulario */
-            font-size: 20px; /* Tamaño de fuente 32 puntos */
+            font-family: 'Teko', sans-serif; /* Apply Teko font to the form */
+            font-size: 20px; /* Font size 20px */
             font-weight: 100;
             letter-spacing: 1px;
         }
@@ -104,7 +120,7 @@
             margin-right: 10px;
             margin-bottom: 10px;
             box-sizing: border-box;
-            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al campo de email */
+            font-family: 'Teko', sans-serif; /* Apply Teko font to email field */
         }
 
         button {
@@ -116,7 +132,7 @@
             border: none;
             cursor: pointer;
             transition: background-color 0.3s;
-            font-family: 'Teko', sans-serif; /* Aplicar la fuente Teko al botón */
+            font-family: 'Teko', sans-serif; /* Apply Teko font to button */
         }
 
         button:hover {
@@ -135,9 +151,6 @@
         <div>
             <img src="img/menu.png" alt="Menu Icon">
             <!-- Use "img/menu.png" for the small icon image -->
-        </div>
-        <!---div id="logo-container">
-            <img id="logo" src="img/Logo.png" alt="Company Logo"-->
         </div>
     </header>
 
@@ -159,4 +172,8 @@
             var image = document.getElementById('image-background');
             // You can adjust the source and alt text accordingly
             image.src = "img/background-image.jpg";
-            image.alt = "Background Image Alt Text
+            image.alt = "Background Image Alt Text";
+        });
+    </script>
+</body>
+</html>
