Bg image, form color

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         /* Additional styles for the form container */
         #form-container {
-            background-color: #000; /* Black background color */
+            background-color: #231d2b; /* Black background color */
             padding: 20px; /* Add padding to the container */
             border-radius: 10px; /* Add rounded corners */
             position: fixed; /* Change from absolute to fixed */
