--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             overflow: hidden; /* Prevent scrolling */
+            background-color: #000; /* Black background color */
         }
 
         header {
