--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
             input[type="email"] {
                 width: 100%; /* Adjust the width to 100% for mobile */
                 font-size: 18px; /* Adjust font size for mobile */
-                margin-right: 0; /* Remove right margin for mobile */
+                margin-right: 10%; /* Remove right margin for mobile */
                 margin-bottom: 10px; /* Add bottom margin for mobile */
+                margin-left: 10%;
             }
 
             button {
-                padding: 10px 30px; /* Adjust padding for mobile */
+                padding: 8px 20px; /* Adjust padding for mobile */
                 font-size: 18px; /* Adjust font size for mobile */
             }
         }
@@ -117,9 +118,9 @@
         }
 
         input[type="email"] {
-            padding: 10px;
-            width: 400px;
-            font-size: 24px;
+            padding: 8px;
+            width: 350px;
+            font-size: 22px;
             border: 1px solid #ccc;
             border-radius: 8px;
             margin-right: 10px;
@@ -129,9 +130,9 @@
         }
 
         button {
-            padding: 10px 60px;
+            padding: 8px 40px;
             border-radius: 8px;
-            font-size: 24px;
+            font-size: 22px;
             background-color: #fffc00; /* Vivid yellow */
             color: #201829;
             border: none;
